...
                if let movieDetails = viewModel.movieDetails {
                    Button {
                        favoritesManager.toggleFavorite(movie: movieDetails.asMovie)
                    } label: {
                        FavoriteImage(favorite: favoritesManager.isFavorite(movie: movieDetails.asMovie))
                    }
                    .accessibilityIdentifier("favorite_button")
                }
            }
            .onAppear {
                Task {
                    await viewModel.getMovieDetails(movieId: id)
                }
...
